# XML_GridViewServer

./: CMakeLists.txt  Doxyfile  README.md  azure-pipelines.yml
include/: config.hpp  ioHandler.hpp  messageParser.hpp  types.hpp  xmlExceptions.hpp  xmlParser.hpp  xmlService.hpp
src/: config.cpp  ioHandler.cpp  main.cpp  messageParser.cpp  xmlParser.cpp  xmlService.cpp
src/docs/: developing.md
